syntax = "proto3";
package VrmProtobuf;

import "meta.proto";
import "humanoid.proto";
import "firstPerson.proto";
import "lookAt.proto";
import "blendShape.proto";
import "springBone.proto";
import "constraint.proto";

message VRMCVrm
{
  string specVersion = 1;

  Meta meta = 2;
  Humanoid humanoid = 3;
  FirstPerson firstPerson = 4;
  LookAt lookAt = 5;
  BlendShape blendShape = 6;
  SpringBone springBone = 7;
  Constraint constraint = 8;
}